# MIL-STD-1553_BC_GUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  commands.json  config.json
scripts/: run.sh
src/: bc.cpp  bc.hpp  common.hpp  configData.hpp  main.cpp
src/fileOperations/: fileOperations.hpp
src/json/: json.hpp
src/logger/: logger.cpp
ui/: app-window.slint  config-file-window.slint  custom-button.slint  rt-sa-wc.slint  word-box.slint
